--- a/roles/jenkins/tasks/pipeline.yml
+++ b/roles/jenkins/tasks/pipeline.yml
@@ -1,11 +1,11 @@
 - name: Create Config file
   ansible.builtin.template:
-    src: s-job.xml
-    dest: /tmp/s-job.xml
+    src: s-jobb.xml
+    dest: /tmp/s-jobb.xml
 
 - name: Create Job
   community.general.jenkins_job:
-    config: "{{ lookup('file', '/tmp/s-job.xml') }}"
+    config: "{{ lookup('file', '/tmp/s-jobb.xml') }}"
     name: "{{item.dir}}/{{item.name}}"
     url: http://172.31.9.181:8080
     user: admin
