--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -1,3 +1,16 @@
+# - name: Create Folder
+#   community.general.jenkins_job:
+#     config: "{{ lookup('file', 'templates/folder.xml') }}"
+#     name: "{{item}}"
+#     url: http://172.31.9.181:8080
+#     user: admin
+#     password: "{{jenkins_password}}"
+#   loop: "{{ folders }}"
+
+# - name: Create Pipeline Jobs
+#   ansible.builtin.include_tasks: pipeline.yml
+#   loop: "{{ pipeline_jobs }}"
+
 - name: Create Folder
   community.general.jenkins_job:
     config: "{{ lookup('file', 'templates/folder.xml') }}"
@@ -8,7 +21,8 @@
   loop: "{{ folders }}"
 
 - name: Create Pipeline Jobs
-  ansible.builtin.include_tasks: pipeline.yml
-  loop: "{{ pipeline_jobs }}"
+  ansible.builtin.include_tasks: mbranch-pipeline.yml
+  loop: "{{ ci_pipeline_jobs }}"
+
 
 
